--- a/UI/audio-repo/public/style.css
+++ b/UI/audio-repo/public/style.css
@@ -185,12 +185,15 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
   row-gap: 20px;
+  margin-top: 15px;
 }
 
 .month-rack > div{
-  background-color: #8AB9E4;
+  color:white;
   height: 50px;
   display: flex;
+  font-weight: bold;
+  font-size: 18px;
   justify-content: flex-end;
   align-items: flex-end;
   padding:7px;
