--- a/UI/audio-repo/public/style.css
+++ b/UI/audio-repo/public/style.css
@@ -34,6 +34,12 @@ body {
   padding-right: 35px;
 }
 
+@media (min-width:768px) {
+  .header > div:last-child {
+    text-align: center;
+  }
+}
+
 .header .year {
   font-size: 18px;
 }
@@ -43,12 +49,24 @@ body {
   font-size: 36px;
 }
 
+.results-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 .results {
   position: relative;
   top:-15px;
   background-color: transparent;
   padding-left: 20px;
   padding-right: 20px;
+  width: 90%;
+}
+
+@media (min-width:768px) {
+  .results {
+    width:40%;
+  }
 }
 
 .results > div {
@@ -81,6 +99,12 @@ body {
   background-color: transparent;
   padding:15px;
   margin-bottom: 15px;
+}
+
+@media (min-width:768px) {
+  .item {
+    padding:25px;
+  }
 }
 
 .item .title {
@@ -202,4 +226,13 @@ body {
 
 .month-rack > div:hover {
   cursor: pointer;
+}
+
+.select-style {
+  width:100%;
+  margin-top:15px;
+  height: 50px;
+  padding:0 10px;
+  font-size: 18px;
+  font-weight: 600;
 }
