--- a/UI/audio-repo/public/style.css
+++ b/UI/audio-repo/public/style.css
@@ -14,8 +14,9 @@ body {
 
 .header > div:first-child {
   display:flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding:20px;
+  text-align: center;
 }
 
 .header a {
@@ -109,7 +110,7 @@ body {
 
 .item .title {
   font-weight: 600;
-  font-size: 21px;
+  font-size: 32px;
   margin-top: 10px;
   margin-bottom: 5px;
 }
@@ -119,8 +120,8 @@ body {
 }
 
 .item .minister {
-  font-size: 14px;
-  opacity: 0.5;
+  font-size: 18px;
+  color: #a7a5a5;
 }
 
 .item .bottom-section {
@@ -132,15 +133,23 @@ body {
 
 .item .size {
   font-size: 14px;
+  color: #a7a5a5;
 }
 
-.item .download {
+.item a.download {
   font-size: 18px;
+  height: 40px;
+  width: 40px;
   font-weight: 600;
   color: #007bff;
+  border-radius: 50%;
+  background-color: hsl(209, 63%, 92%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.download a {
+a.download {
   text-decoration: none;
 }
 
@@ -286,7 +295,7 @@ body {
   border-radius: 5px;
 }
 
-.upload-main button {
+.upload-main button.upload {
   box-sizing: border-box;
   width: 100%;
   height: 50px;
@@ -298,3 +307,10 @@ body {
   box-shadow: 0 1px 10px #a7a5a5;
   border-radius: 5px;
 }
+
+.flex { display: flex;}
+.justify-center { justify-content: center;}
+.w2 { width: 20px;}
+.text-decoration-none { text-decoration: none;}
+.white { color: white;}
+.text-center { text-align: center;}
